[package]
name = "carve-protocol-ag-ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "AG-UI protocol types and adapters for carve-agent"

[dependencies]
carve-agent-contract = { path = "../carve-agent-contract" }
carve-protocol-contract = { path = "../carve-protocol-contract" }
carve-thread-model = { path = "../carve-thread-model" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
json-patch = "3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }

[dev-dependencies]
async-trait = "0.1"
carve-agent = { path = "../carve-agent" }
carve-state = { path = "../carve-state" }
carve-state-derive = { path = "../carve-state-derive" }
carve-thread-store-adapters = { path = "../carve-thread-store-adapters" }
futures = "0.3"
genai = "0.5"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }

[lints]
workspace = true
