[package]
name = "carve-protocol-ai-sdk-v6"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "AI SDK v6 protocol types and adapters for carve-agent"

[dependencies]
carve-agent-contract = { path = "../carve-agent-contract" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = "0.1"

[dev-dependencies]
genai = "0.5"

[lints]
workspace = true
