[package]
name = "carve-state-derive"
description = "Derive macro for carve-state CarveViewModel trait"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true

[dev-dependencies]
carve-state = { workspace = true }
trybuild.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
